export const snapshot = {};

snapshot[`Basic usage: file structure 1`] = `
"<html>
        <head>
            <title>foo</title>
        </head> 
        <body>
            
        <h1>foo title 1</h1>
        <p>foo content 1</p>
    
        </body>
    </html>"
`;

snapshot[`Basic usage: file structure 2`] = `
"<html>
        <head>
            <title>foo</title>
        </head> 
        <body>
            
        <h1>foo title 2</h1>
        <p>foo title 2</p>
    
        </body>
    </html>"
`;

snapshot[`Basic usage: file structure 3`] = `
"<html>
        <head>
            <title>bar</title>
        </head>
        <body>
            
        <h1>bar title 1</h1>
        <p>bar content 1</p>
    
        </body>
    </html>"
`;

snapshot[`Basic usage: file structure 4`] = `
"<html>
        <head>
            <title>bar</title>
        </head>
        <body>
            
        <h1>bar title 2</h1>
        <p>bar title 2</p>
    
        </body>
    </html>"
`;
